--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-route": ">=1.2.*",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
+      "ng-file-upload": "~6.0.3",
     "angular-socket-io": "~0.6.0"
   },
   "devDependencies": {
